hotfix positions creator-card

--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -11,7 +11,7 @@
     <div class="flex justify-end">
       <p class="p-2 w-[50%] md:w-full" [innerHtml]="description"></p>
     </div>
-    <div class="w-full flex justify-center mt-5">
+    <div class="w-full flex justify-center mt-5 md:w-[50%] md:justify-start">
       <div class="flex gap-3 xxs:gap-10 sm:gap-x-20">
         <a href="{{twitch}}" target="_blank"
           class="btn card bg-[#6441a5] w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
