--- a/src/app/components/landing-creators/landing-creators.component.html
+++ b/src/app/components/landing-creators/landing-creators.component.html
@@ -15,10 +15,14 @@
     <div #creatorsCarouselBgImage [ngStyle]="{'background-image': actualBgImage}" class="bg-[length:50%_auto] lg:bg-[length:50%_auto] xl:bg-[length:40%_auto] 2xl:bg-[length:35rem_auto] xl:max-w-[2550px] xl:left-[25%] bg-left-bottom bg-no-repeat w-[100vw] h-[100%] absolute top-0 left-0"></div>
   </div>
   <div class="nav-creators bg-gradient-to-r from-alfilo-dark-blue via-black to-alfilo-dark-blue backdrop-blur-lg flex justify-between md:justify-center md:gap-10 items-center h-[80px]">
-    <app-svg-icon class="arrow-svg arrow-left" (click)="slidePrev()" path="assets/images/arrow.svg"></app-svg-icon>
+    <div class="arrow-svg" (click)="slidePrev()">
+      <svg width="64" height="64" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z" fill="currentColor" transform-origin="center" transform="rotate(180)"></path></svg>
+    </div>
     <ng-template ngFor let-creator [ngForOf]="creators" let-i="index">
         <img src="/assets/images/content-creator/{{creator.logo}}" (click)="goToSlide(i)" class="logo-creator rounded-full w-[64px] hover:cursor-pointer hover:shadow-lg hover:shadow-white" alt="creatorLogo"/>
     </ng-template>
-    <app-svg-icon class="arrow-svg arrow-right" (click)="slideNext()" path="assets/images/arrow.svg"></app-svg-icon>
+    <div class="arrow-svg" (click)="slideNext()">
+      <svg width="64" height="64" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z" fill="currentColor"></path></svg>
+    </div>
   </div>
 </div>
