changes by munky

--- a/src/app/components/landing-chronology/landing-chronology.component.css
+++ b/src/app/components/landing-chronology/landing-chronology.component.css
@@ -3,8 +3,8 @@
   --swiper-scrollbar-drag-bg-color: #0394cc;
   --swiper-scrollbar-size: 8px;
   --swiper-pagination-progressbar-bg-color: white;
-  --swiper-pagination-progressbar-bg-color: white;
   --swiper-navigation-color: white;
+  --swiper-pagination-color: #0394cc;
 
   .event-list-lg {
     -ms-overflow-style: none;
