--- a/src/app/components/landing-creators/landing-creators.component.css
+++ b/src/app/components/landing-creators/landing-creators.component.css
@@ -8,7 +8,9 @@
         cursor: pointer;
 
         & > svg > path {
-          fill: black;
+          @media (min-width: 768px) {
+            fill: black;
+          }
         }
       }
     }
