--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -19,12 +19,8 @@
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
         </label>
         <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-black rounded-box w-52 absolute -left-[10rem]">
+          <li *ngFor="let item of navItems"><a href="#{{item.path}}" (click)="clickSection(item.name)" [ngClass]="{'text-alfilo-dark-blue' : item.active, 'text-base-content' : !item.active}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] hover:text-alfilo-blue hover:!bg-transparent rounded-lg">{{item.name}}</a></li>
 
-<!--          <li><a href="#clan" (click)="toggleSectionSelected('clan')" [ngClass]="{'!text-alfilo-dark-blue': currentSectionSelected === 'clan'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:text-alfilo-blue hover:!bg-transparent rounded-lg">Clan</a></li>-->
-<!--          <li><a href="#actividades" (click)="toggleSectionSelected('actividades')" [ngClass]="{'!text-alfilo-dark-blue': currentSectionSelected === 'actividades'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:text-alfilo-blue hover:!bg-transparent rounded-lg">Actividades</a></li>-->
-<!--          <li><a href="#cronologia" (click)="toggleSectionSelected('cronologia')" [ngClass]="{'!text-alfilo-dark-blue': currentSectionSelected === 'cronologia'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:text-alfilo-blue hover:!bg-transparent rounded-lg">Cronología</a></li>-->
-<!--          <li><a href="#creadores" (click)="toggleSectionSelected('creadores')" [ngClass]="{'!text-alfilo-dark-blue': currentSectionSelected === 'creadores'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:text-alfilo-blue hover:!bg-transparent rounded-lg">Creadores</a></li>-->
-<!--          <li><a href="#contacto" (click)="toggleSectionSelected('contacto')" [ngClass]="{'!text-alfilo-dark-blue': currentSectionSelected === 'contacto'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:text-alfilo-blue hover:!bg-transparent rounded-lg">Contacto</a></li>-->
         </ul>
       </div>
       <!-- <div class="dropdown dropdown-end">
