--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -2,9 +2,12 @@
   <div
     class="hidden lg:block absolute h-[95%] top-0 left-0 border-b-2 border-r-2 rounded-br-2xl sm:w-0 lg:w-[50%] lg:min-w-[754px] "></div>
 
-  <div
-    class="text-[4rem] xxs:text-[5rem] xs:text-[6rem] md:text-[9rem] text-center font-capital-daren-italic lg:w-[50%] lg:min-w-[754px] text-shadow"
-    appObserveVisibility (visible)="activateAnimation()" [@dashLeft]="isVisible ? 'visible' : 'hidden'">cronología
+  <div appObserveVisibility (visible)="activateAnimation()" [@dashLeft]="isVisible ? 'visible' : 'hidden'">
+    <div
+            class="text-[4rem] xxs:text-[5rem] xs:text-[6rem] md:text-[9rem] text-center font-capital-daren-italic lg:w-[50%] lg:min-w-[754px] text-shadow"
+            appObserveVisibility [stopObserving]="false"  (visible)="activateNavigation('Cronología')"
+            >cronología
+    </div>
   </div>
   <swiper-container #carouselChronology init="false" class="w-[100vw] h-fit lg:hidden">
     <ng-template ngFor let-event [ngForOf]="events" let-i="index">
@@ -14,8 +17,8 @@
       </swiper-slide>
     </ng-template>
   </swiper-container>
-  <div class="event-list-lg h-[40rem] gap-x-10 gap-y-20 py-10 overflow-x-hidden grid-cols-2
-    hidden sm:self-center md:w-full lg:flex lg:flex-col lg:self-start lg:h-[51rem] xl:self-center
+  <div class="event-list-lg h-[40rem] gap-x-10 gap-y-20 py-10 overflow-x-hidden grid-cols-2 w-fit
+    hidden sm:self-center lg:flex lg:flex-col lg:self-start lg:h-[51rem] lg+:self-center
     lg:px-10 lg+:w-[80%] lg+:grid lg+:min-w-[754px] lg+:max-w-[90rem] z-10">
     <ng-template ngFor let-event [ngForOf]="events" let-i="index">
       <app-basic-card class="event-card flex items-center lg:max-w-[43.4rem]
