fix w-[100vw] to w-full

--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -1,4 +1,4 @@
-<div class="h-full xs:min-h-[25rem] sm:min-h-[26rem] md:min-h-[30rem] lg:min-h-[35rem] md:flex md:flex-col mt-[4rem]">
+<div class="h-full xs:min-h-[25rem] sm:min-h-[26rem] md:min-h-[30rem] lg:min-h-[35rem] md:flex md:flex-col mt-[4rem] ">
   <div class="flex h-full md:w-[50%] md:gap-5 self-end">
     <div class="w-[40%] md:w-auto flex justify-center items-center">
       <img src="/assets/images/content-creator/{{logo}}" class="rounded-full w-[5rem]" alt="creatorLogo"/>
@@ -29,3 +29,23 @@
     </div>
   </div>
 </div>
+
+
+<!--<div class="flex flex-col items-center border border-red-500 relative">-->
+
+<!--  <div class="flex w-full border">-->
+<!--    <div class="w-[40%] flex justify-center items-center border">-->
+<!--      <img src="/assets/images/content-creator/{{logo}}" class="rounded-full w-[5rem]" alt="creatorLogo"/>-->
+<!--    </div>-->
+<!--    <div class="w-[60%] flex justify-center items-center border">-->
+<!--      <p class="text-center text-[2rem] font-medium">{{name}}</p>-->
+<!--    </div>-->
+<!--  </div>-->
+
+<!--  <div class="flex gap-5">-->
+<!--    <img src="/assets/images/content-creator/{{bgImage}}" alt="creatorImage" class="w-1/2">-->
+<!--    <div class="w-1/2">{{description}}</div>-->
+<!--  </div>-->
+
+<!--</div>-->
+
