--- a/src/app/components/landing-creators/landing-creators.component.html
+++ b/src/app/components/landing-creators/landing-creators.component.html
@@ -8,14 +8,14 @@
     <div class="w-full h-64 absolute bottom-0 ">
       <div class="w-full h-full "></div>
     </div>
-    <swiper-container #creatorsCarousel init="false" class="w-[100vw] h-fit">
+    <swiper-container #creatorsCarousel init="false" class="w-full border h-fit">
       <ng-template ngFor let-creator [ngForOf]="creators">
-        <swiper-slide>
-          <app-creator-card class="swiper-slide" logo="{{creator.logo}}" name="{{creator.name}}" description="{{creator.description}}" twitch="{{creator.twitch}}" youtube="{{creator.youtube}}" x="{{creator.x}}"></app-creator-card>
+        <swiper-slide class="">
+          <app-creator-card class="swiper-slide " logo="{{creator.logo}}" name="{{creator.name}}" description="{{creator.description}}" twitch="{{creator.twitch}}" youtube="{{creator.youtube}}" x="{{creator.x}}" bgImage="{{creator.bgImage}}"></app-creator-card>
         </swiper-slide>
       </ng-template>
     </swiper-container>
-    <div [ngStyle]="{'background-image': actualBgImage}" class="bg-[length:50%_auto] lg:bg-[length:50%_auto] xl:bg-[length:40%_auto] 2xl:bg-[length:35rem_auto] xl:max-w-[2550px] xl:left-[25%] bg-left-bottom bg-no-repeat w-[100vw] h-[100%] absolute top-0 left-0"></div>
+    <div [ngStyle]="{'background-image': actualBgImage}" class="bg-[length:50%_auto] lg:bg-[length:50%_auto] xl:bg-[length:40%_auto] 2xl:bg-[length:35rem_auto] xl:max-w-[2550px] xl:left-[25%] bg-left-bottom bg-no-repeat w-full h-full absolute top-0 left-0"></div>
   </div>
   <div class="nav-creators bg-gradient-to-r from-alfilo-dark-blue via-black to-alfilo-dark-blue backdrop-blur-lg flex justify-between md:justify-center md:gap-10 items-center h-[80px]">
     <div class="arrow-svg" (click)="slidePrev()">
