--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -1,51 +1,78 @@
-<div class="h-full xs:min-h-[25rem] sm:min-h-[26rem] md:min-h-[30rem] lg:min-h-[35rem] md:flex md:flex-col mt-[4rem] ">
-  <div class="flex h-full md:w-[50%] md:gap-5 self-end">
-    <div class="w-[40%] md:w-auto flex justify-center items-center">
-      <img src="/assets/images/content-creator/{{logo}}" class="rounded-full w-[5rem]" alt="creatorLogo"/>
+<!--<div class="h-full xs:min-h-[25rem] sm:min-h-[26rem] md:min-h-[30rem] lg:min-h-[35rem] md:flex md:flex-col mt-[4rem] ">-->
+<!--  <div class="flex h-full md:w-[50%] md:gap-5 self-end">-->
+<!--    <div class="w-[40%] md:w-auto flex justify-center items-center">-->
+<!--      <img src="/assets/images/content-creator/{{logo}}" class="rounded-full w-[5rem]" alt="creatorLogo"/>-->
+<!--    </div>-->
+<!--    <div class="w-[60%] flex justify-start items-center">-->
+<!--      <p class="text-center text-[2rem] md:text-left md:text-5xl font-medium">{{name}}</p>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div class="p-5 flex md:w-[50%] flex-col self-end">-->
+<!--    <div class="flex justify-end">-->
+<!--      <p class="p-2 w-[50%] md:w-full" [innerHtml]="description"></p>-->
+<!--    </div>-->
+<!--    <div class="w-full flex justify-center mt-5 md:w-[50%] md:justify-start">-->
+<!--      <div class="flex gap-3 xxs:gap-10 sm:gap-x-20">-->
+<!--        <a href="{{twitch}}" target="_blank"-->
+<!--          class="btn card bg-[#6441a5] w-14 h-14  border-2 border-white p-2 flex place-content-center place-items-center">-->
+<!--          <img src="/assets/images/twitch.svg" alt="Logo" class="w-8"/>-->
+<!--        </a>-->
+<!--        <a href="{{youtube}}" target="_blank"-->
+<!--          class="btn card bg-black w-14 h-14  border-2 border-white p-2 flex place-content-center place-items-center">-->
+<!--          <img src="/assets/images/youtube.svg" alt="Logo" class="w-10"/>-->
+<!--        </a>-->
+<!--        <a href="{{x}}" target="_blank"-->
+<!--          class="btn card bg-black w-14 h-14  border-2 border-white p-2 flex place-content-center place-items-center">-->
+<!--          <app-svg-icon class="x-svg" path="assets/images/x.svg"></app-svg-icon>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
+
+<div class="flex justify-center  relative max-w-7xl ">
+  <img src="/assets/images/content-creator/{{bgImage}}" alt="creatorImage" class="w-1/2 hidden   md:inline ">
+  <div class="flex flex-col items-center md:w-1/2  ">
+    <div class="flex w-full justify-center items-center gap-x-10  ">
+      <img src="/assets/images/content-creator/{{logo}}" class="rounded-full w-[5rem]  " alt="creatorLogo"/>
+      <p class="text-center text-[2rem] font-medium ">{{name}}</p>
     </div>
-    <div class="w-[60%] flex justify-start items-center">
-      <p class="text-center text-[2rem] md:text-left md:text-5xl font-medium">{{name}}</p>
-    </div>
-  </div>
-  <div class="p-5 flex md:w-[50%] flex-col self-end">
-    <div class="flex justify-end">
-      <p class="p-2 w-[50%] md:w-full" [innerHtml]="description"></p>
-    </div>
-    <div class="w-full flex justify-center mt-5 md:w-[50%] md:justify-start">
-      <div class="flex gap-3 xxs:gap-10 sm:gap-x-20">
+    <div class="flex w-full h-full justify-center gap-5 ">
+      <img src="/assets/images/content-creator/{{bgImage}}" alt="creatorImage" class="w-1/2 md:hidden   ">
+      <div class="w-1/2 md:w-full self-center mx-5 md:mx-10 text-center max-w-md   max-h-40 md:max-h-80 overflow-auto">{{description}}</div>
+
+      <div class="flex gap-3 py-3 xxs:gap-10 sm:gap-x-20 absolute bottom-0">
         <a href="{{twitch}}" target="_blank"
-          class="btn card bg-[#6441a5] w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+           class="btn card bg-[#6441a5] w-14 h-14  border border-white p-2 flex place-content-center place-items-center">
           <img src="/assets/images/twitch.svg" alt="Logo" class="w-8"/>
         </a>
         <a href="{{youtube}}" target="_blank"
-          class="btn card bg-black w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+           class="btn card bg-black w-14 h-14  border border-white p-2 flex place-content-center place-items-center">
           <img src="/assets/images/youtube.svg" alt="Logo" class="w-10"/>
         </a>
         <a href="{{x}}" target="_blank"
-          class="btn card bg-black w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+           class="btn card bg-black w-14 h-14  border border-white p-2 flex place-content-center place-items-center">
           <app-svg-icon class="x-svg" path="assets/images/x.svg"></app-svg-icon>
         </a>
       </div>
     </div>
   </div>
+
+  <div class="flex gap-3 py-3 xxs:gap-10 sm:gap-x-20 absolute bottom-0 md:hidden">
+    <a href="{{twitch}}" target="_blank"
+       class="btn card bg-[#6441a5] w-14 h-14  border-2 border-white p-2 flex place-content-center place-items-center">
+      <img src="/assets/images/twitch.svg" alt="Logo" class="w-8"/>
+    </a>
+    <a href="{{youtube}}" target="_blank"
+       class="btn card bg-black w-14 h-14  border-2 border-white p-2 flex place-content-center place-items-center">
+      <img src="/assets/images/youtube.svg" alt="Logo" class="w-10"/>
+    </a>
+    <a href="{{x}}" target="_blank"
+       class="btn card bg-black w-14 h-14  border-2 border-white p-2 flex place-content-center place-items-center">
+      <app-svg-icon class="x-svg" path="assets/images/x.svg"></app-svg-icon>
+    </a>
+  </div>
 </div>
 
 
-<!--<div class="flex flex-col items-center border border-red-500 relative">-->
-
-<!--  <div class="flex w-full border">-->
-<!--    <div class="w-[40%] flex justify-center items-center border">-->
-<!--      <img src="/assets/images/content-creator/{{logo}}" class="rounded-full w-[5rem]" alt="creatorLogo"/>-->
-<!--    </div>-->
-<!--    <div class="w-[60%] flex justify-center items-center border">-->
-<!--      <p class="text-center text-[2rem] font-medium">{{name}}</p>-->
-<!--    </div>-->
-<!--  </div>-->
-
-<!--  <div class="flex gap-5">-->
-<!--    <img src="/assets/images/content-creator/{{bgImage}}" alt="creatorImage" class="w-1/2">-->
-<!--    <div class="w-1/2">{{description}}</div>-->
-<!--  </div>-->
-
-<!--</div>-->
 
