--- a/src/app/components/landing-creators/landing-creators.component.html
+++ b/src/app/components/landing-creators/landing-creators.component.html
@@ -1,22 +1,19 @@
-<div class="landing-contact-us w-full pt-20 pb-28" appObserveVisibility [stopObserving]="false"  (visible)="activateNavigation('Creadores')">
-  <div class="flex flex-col items-center">
+<div class="landing-contact-us w-full pt-20 " appObserveVisibility [stopObserving]="false"  (visible)="activateNavigation('Creadores')">
+  <div class="flex flex-col pb-10 items-center">
     <p class="font-capital-daren-italic text-[2.5rem] leading-[2.5rem] xxs:text-[3rem] xxs:leading-[3rem] xs:text-[3.5rem] xs:leading-[3.5rem] md:text-[5.5rem] md:leading-[5rem] text-shadow">CONOCE NUESTROS</p>
     <p class="font-capital-daren-italic text-[2.5rem] leading-[2.5rem] xxs:text-[3rem] xxs:leading-[3rem] xs:text-[3.5rem] xs:leading-[3.5rem] md:text-[4.5rem] md:leading-[4rem] text-shadow">CREADORES DE</p>
     <p class="font-capital-daren-italic text-[4.5rem] lg:text-[10rem] xxs:text-[5rem] xxs:leading-[6rem] xs:text-[6rem] xs:leading-[7rem] md:leading-[11rem] text-shadow"  >CONTENIDO</p>
+
   </div>
-  <div class="relative h-auto">
-    <div class="w-full h-64 absolute bottom-0 ">
-      <div class="w-full h-full "></div>
-    </div>
-    <swiper-container #creatorsCarousel init="false" class="w-full border h-fit">
+
+    <swiper-container #creatorsCarousel init="false" class="w-full">
       <ng-template ngFor let-creator [ngForOf]="creators">
-        <swiper-slide class="">
+        <swiper-slide class=" flex justify-center">
           <app-creator-card class="swiper-slide " logo="{{creator.logo}}" name="{{creator.name}}" description="{{creator.description}}" twitch="{{creator.twitch}}" youtube="{{creator.youtube}}" x="{{creator.x}}" bgImage="{{creator.bgImage}}"></app-creator-card>
         </swiper-slide>
       </ng-template>
     </swiper-container>
-    <div [ngStyle]="{'background-image': actualBgImage}" class="bg-[length:50%_auto] lg:bg-[length:50%_auto] xl:bg-[length:40%_auto] 2xl:bg-[length:35rem_auto] xl:max-w-[2550px] xl:left-[25%] bg-left-bottom bg-no-repeat w-full h-full absolute top-0 left-0"></div>
-  </div>
+
   <div class="nav-creators bg-gradient-to-r from-alfilo-dark-blue via-black to-alfilo-dark-blue backdrop-blur-lg flex justify-between md:justify-center md:gap-10 items-center h-[80px]">
     <div class="arrow-svg" (click)="slidePrev()">
       <svg width="64" height="64" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z" fill="currentColor" transform-origin="center" transform="rotate(180)"></path></svg>
@@ -28,5 +25,4 @@
       <svg width="64" height="64" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0.38296 20.0762C0.111788 19.805 0.111788 19.3654 0.38296 19.0942L9.19758 10.2796L0.38296 1.46497C0.111788 1.19379 0.111788 0.754138 0.38296 0.482966C0.654131 0.211794 1.09379 0.211794 1.36496 0.482966L10.4341 9.55214C10.8359 9.9539 10.8359 10.6053 10.4341 11.007L1.36496 20.0762C1.09379 20.3474 0.654131 20.3474 0.38296 20.0762Z" fill="currentColor"></path></svg>
     </div>
   </div>
-  <div class="w-full h-64 "></div>
 </div>
