check for token on init if logged in

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -10,7 +10,9 @@
       <div class="tabs lg:inline-flex">
         <a *ngFor="let item of navItems" href="#{{item.path}}" class="tab font-capital-daren text-[1rem] xl:text-[1.4rem] leading-[1.5rem]  hover:text-alfilo-blue rounded-lg" [ngClass]="{'text-alfilo-dark-blue' : item.active, 'text-base-content' : !item.active}">{{item.name}}</a>
         <a class="btn" (click)="login()">LOGIN</a>
-        <a class="btn" (click)="getToken()">Get Token</a>
+
+
+
       </div>
     </div>
     <div class="lg:hidden w-5/6 flex justify-end">
@@ -27,7 +29,16 @@
   </div>
 </div>
 
-
-
 <router-outlet></router-outlet>
-
+<dialog #signUpModal id="my_modal_1" class="modal">
+  <div class="modal-box">
+    <h3 class="font-bold text-lg">ATENCIÓN</h3>
+    <p class="py-4">{{signUpModalText}}</p>
+    <div class="modal-action">
+      <form method="dialog">
+        <!-- if there is a button in form, it will close the modal -->
+        <button class="btn">Close</button>
+      </form>
+    </div>
+  </div>
+</dialog>
