--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -10,7 +10,7 @@
       <div class="tabs lg:inline-flex">
         <a *ngFor="let item of navItems" href="#{{item.path}}" class="tab font-capital-daren text-[1rem] xl:text-[1.4rem] leading-[1.5rem]  hover:text-alfilo-blue rounded-lg" [ngClass]="{'text-alfilo-dark-blue' : item.active, 'text-base-content' : !item.active}">{{item.name}}</a>
         <a class="btn" (click)="login()">LOGIN</a>
-        <a class="btn" (click)="getToken()">SIGN UP</a>
+        <a class="btn" (click)="logout()">LOGOUT</a>
 
 
 
@@ -30,6 +30,9 @@
   </div>
 </div>
 
+<div>{{printLogin}}</div>
+<div>{{printAccesToken}}</div>
+<div>{{printRefreshToken}}</div>
 <router-outlet></router-outlet>
 <dialog #signUpModal id="my_modal_1" class="modal">
   <div class="modal-box border-2">
