--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -8,8 +8,10 @@
   <div class="navbar-end">
     <div class="w-5/6 hidden lg:flex justify-center">
       <div class="tabs lg:inline-flex">
-        <a *ngFor="let item of navItems" href="#{{item.path}}" class="tab font-capital-daren text-[1rem] xl:text-[1.4rem] leading-[1.5rem]  hover:text-alfilo-blue rounded-lg" [ngClass]="{'text-alfilo-dark-blue' : item.active, 'text-base-content' : !item.active}">{{item.name}}</a>
+        <a *ngFor="let item of navItems" [href]="'#' + item.path" class="tab font-capital-daren text-[1rem] xl:text-[1.4rem] leading-[1.5rem]  hover:text-alfilo-blue rounded-lg" [ngClass]="{'text-alfilo-dark-blue' : item.active, 'text-base-content' : !item.active}">{{item.name}}</a>
         <a class="btn" (click)="login()">LOGIN</a>
+        <a class="btn" (click)="getToken()">GET TOKEN</a>
+        <a class="btn" (click)="signUp()">SIGN UP</a>
         <a class="btn" (click)="logout()">LOGOUT</a>
 
 
